# dotsync-py

./: .gitignore  LICENSE  README.md  pyproject.toml
src/dotsync/: __init__.py  brewfile.py  cli.py  config.py  linker.py  setup_machine.py  ssh.py  sync.py
tests/: conftest.py  test_cli.py  test_config.py  test_linker.py
