[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dotsync-py"
version = "0.1.0"
description = "Fleet-style dotfiles manager with push cascading and status dashboard"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Scott Sheffield", email = "scott@shef.us" },
]
keywords = ["dotfiles", "sync", "fleet", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "tomli-w>=1.0",
]

[project.urls]
Homepage = "https://github.com/scott-shef/dotsync"
Repository = "https://github.com/scott-shef/dotsync"
Issues = "https://github.com/scott-shef/dotsync/issues"

[project.scripts]
dotsync = "dotsync.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/dotsync"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
]
